# build-agent

./: .gitignore  AGENT_DRIVEN_REAL_ESTATE_WORKFLOW.md  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/adr/: 0001-classification-strategy.md  0002-evidence-query-caching-and-backpressure.md
src/intake/: __init__.py  __main__.py  authorisation.py  classification.py  evidence.py  evidence_model.py  gate.py  geometry.py  ids.py  manifest.py  memory.py  model.py  protocols.py  service.py
tests/: conftest.py  test_classification.py  test_evidence.py  test_intake.py  test_smoke.py
